--- a/Aulas/Aula_05/styles.css
+++ b/Aulas/Aula_05/styles.css
@@ -65,7 +65,23 @@ body{
     margin:10px 0px;
     cursor: pointer;
 }
+   /*  NÃO FUNCIONA
+   box-shadow: inset 0 0 0 0 #D80286;
+    -webkit-transition: ease-out 0.4s;
+    -moz-transition: ease-out 0.4s;
+    transition: ease-out 0.4s; 
+}
 
+.card-footer .button_slide_left{
+        box-shadow: inset 0 0 0 50px #D80286;
+}
+
+#outer {
+    width: 364px;
+    margin: 50px auto 0 auto;
+    text-align: center;
+  }
+ */
 .card-footer a{
     text-align: center;
     font-size: 12px;
