--- a/Aulas/Aula_05/styles.css
+++ b/Aulas/Aula_05/styles.css
@@ -68,7 +68,7 @@ body{
     color: #FFF;
     border: 2px solid rgb(216, 2, 134);
     border-radius: 0px;
-    padding: 18px 36px;
+    /* padding: 18px 36px; */
     display: inline-block;
     font-family: "Lucida Console", Monaco, monospace;
     font-size: 14px;
@@ -78,7 +78,12 @@ body{
     -webkit-transition: ease-out 0.4s;
     -moz-transition: ease-out 0.4s;
     transition: ease-out 0.4s;
+    width: 100%;
   }
+  .button_slide p{
+     padding: 2px 10px;
+  }
+
 
 .slide_left:hover {
     box-shadow: inset 0 0 0 50px #D80286;
