--- a/Aulas/atividade_calculadora/styless.css
+++ b/Aulas/atividade_calculadora/styless.css
@@ -3,6 +3,7 @@
 }
 .title_c {
     text-align: center;
+    display: flex;
 }
 
 .view {
@@ -14,7 +15,7 @@ ul {
 
 main{
 background-color: pink;
-
+/*100% */
 
 }
 
@@ -30,4 +31,5 @@ background-color: pink;
 .button {
      text-align: center;
      cursor: pointer;
+
     }    
