--- a/Aulas/Aula_10/style.css
+++ b/Aulas/Aula_10/style.css
@@ -1,9 +1,26 @@
 .tabuleiro{
     display: flex;
+    text-transform: uppercase;
+}
+
+.rodape{
+    text-align: center;
+}
+
+.tabuleiro{
+    display: flex;
     justify-content: center;
 }
 
-
+.campo {
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+    background-color: blueviolet;
+    margin: 5px;
+    cursor: pointer;
+}
 /*.campo span{
     color:white;
     font-size:50px;
